--- a/src/App.scss
+++ b/src/App.scss
@@ -33,3 +33,35 @@ span:hover {
   align-items: center;
   justify-content: center;
 }
+
+.long-box {
+  width: 100%;
+  height: 300vh;
+  background-color: skyblue;
+}
+
+.fixed-box {
+  position: fixed;
+  width: 100px;
+  height: 100px;
+  left: 0;
+  top: 50%;
+  background-color: white;
+}
+.fixed-box2 {
+  position: fixed;
+  width: 100px;
+  height: 100px;
+  right: 0;
+  top: 50%;
+  background-color: white;
+}
+
+.fixed-box3 {
+  position: fixed;
+  width: 100px;
+  height: 100px;
+  right: 50%;
+  top: 50%;
+  background-color: white;
+}
