--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,7 @@ span:hover {
   align-items: center;
   justify-content: center;
 }
-
+//
 .long-box {
   width: 100%;
   height: 300vh;
@@ -41,6 +41,8 @@ span:hover {
 }
 
 .fixed-box {
+  font-size: 32px;
+
   position: fixed;
   width: 100px;
   height: 100px;
@@ -49,6 +51,8 @@ span:hover {
   background-color: white;
 }
 .fixed-box2 {
+  font-size: 32px;
+
   position: fixed;
   width: 100px;
   height: 100px;
@@ -58,10 +62,23 @@ span:hover {
 }
 
 .fixed-box3 {
+  font-size: 32px;
   position: fixed;
   width: 100px;
   height: 100px;
   right: 50%;
   top: 50%;
   background-color: white;
+}
+
+.add-box {
+  height: 100px;
+  width: 100%;
+  background-color: pink;
+}
+
+.observe {
+  width: 100px;
+  height: 100px;
+  background-color: black;
 }
