--- a/src/App.scss
+++ b/src/App.scss
@@ -4,13 +4,13 @@ body {
   width: 100vw;
   height: 100vh;
 }
-
 .main-body {
   position: relative;
   display: flex;
   top: 50%;
   left: 50%;
-  width: 1080px;
+  width: calc(100% - 48px);
+  max-width: 1080px;
   // background-color: black;
   height: 90vh;
   transform: translate(-50%, -50%);
@@ -18,26 +18,227 @@ body {
 }
 
 .link-container {
-  width: 100px;
+  max-width: 52px;
+  min-width: 52px;
   height: 100%;
+  background-color: #ececed;
+  padding-top: 16px;
 }
 
 .link-box {
   width: 100%;
-  height: 100px;
+  height: 48px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.link-box span {
-  cursor: pointer;
-  color: blue;
-  text-decoration: underline;
+.link-box .history {
+  width: 24px;
+  fill: #c7c8ca;
+
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.link-box:hover .history {
+  fill: #b5b6b9;
 }
 
 .content-box {
   width: 100%;
   height: 100%;
-  background-color: yellow;
+  position: relative;
+}
+
+.home-wrap {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: calc(100% - 64px);
+  left: 50%;
+  transform: translate(-50%, 0);
+  height: 100%;
+  // background-color: red;
+}
+
+.home__title {
+  margin-top: 32px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home__title span {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.title__buttonWrap__searchButton {
+  height: 24px;
+  width: 24px;
+  cursor: pointer;
+}
+
+.title__buttonWrap__addFriendButton {
+  width: 28px;
+  margin-left: 8px;
+  cursor: pointer;
+}
+
+.title__buttonWrap {
+  display: flex;
+}
+
+.searchLine {
+  margin-top: 24px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 16px;
+  padding-bottom: 16px;
+
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.searchLine__left {
+  display: flex;
+  width: 100%;
+  height: 100%;
+
+  background-color: #f2f2f2;
+  justify-content: space-between;
+  align-items: center;
+
+  border-radius: 999px;
+}
+
+.searchLine__left__inputWrap {
+  display: flex;
+  align-items: center;
+}
+
+.searchLine__left__searchInput {
+  font-size: 12px;
+  width: 100%;
+  max-width: 300px;
+  border: none;
+  background-color: #f2f2f2;
+}
+
+.searchLine__left__searchInput:focus {
+  border: none;
+  outline: none;
+  background-color: #f2f2f2;
+}
+
+.searchLine__left__submitButton {
+  min-width: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-left: 1px solid #cfcfcf;
+  font-size: 12px;
+  color: #4d4d4d;
+  cursor: pointer;
+}
+.searchLine__left__searchImg {
+  height: 16px;
+  color: #909090;
+  margin: 0px 16px;
+}
+
+.searchLine__right {
+  display: flex;
+  width: 50px;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchLine__right__closeButton {
+  height: 32px;
+  width: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 999px;
+}
+
+.searchLine__right__closeButton:hover {
+  background-color: #f9f9f9;
+}
+
+.friendList {
+  // background-color: red;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  // margin-top: 16px;
+  // padding-top: 16px;
+  overflow-y: scroll;
+}
+
+.friendListrel {
+  height: 100%;
+  width: 100%;
+  // background-color: blue;
+  position: relative;
+}
+
+.friendProfile {
+  display: flex;
+  width: 100%;
+  height: 56px;
+  align-items: center;
+}
+
+.friendProfile:hover {
+  background-color: #f8f8f8;
+}
+
+.friendProfile__img {
+  height: 48px;
+  width: 48px;
+  border-radius: 16px;
+
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.friendProfile__contents {
+  margin-left: 12px;
+}
+
+.friendProfile__contents__name {
+  font-size: 12px;
+  font-weight: bold;
+  margin: 4px;
+
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.friendProfile__name__status {
+  font-size: 12px;
+  color: #909090;
+  margin: 4px;
+
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
