--- a/src/App.scss
+++ b/src/App.scss
@@ -54,7 +54,7 @@ body {
   position: relative;
 }
 
-.home-wrap {
+.friendList-wrap {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -65,7 +65,7 @@ body {
   // padding-right: 8px;
 }
 
-.home__title {
+.friendList__title {
   margin-top: 32px;
   display: flex;
   justify-content: space-between;
@@ -73,7 +73,7 @@ body {
   padding: 0px 32px;
 }
 
-.home__title span {
+.friendList__title span {
   font-size: 16px;
   font-weight: bold;
 }
@@ -95,9 +95,10 @@ body {
 }
 
 .searchLine {
+  display: none;
   margin-top: 24px;
   height: 32px;
-  display: flex;
+  // display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 16px;
@@ -106,6 +107,9 @@ body {
   border-bottom: 1px solid #f2f2f2;
 
   padding: 0px 32px;
+}
+.searchLine.on {
+  display: flex;
 }
 
 .searchLineFriend {
@@ -220,6 +224,102 @@ body {
 .friendList::-webkit-scrollbar-track {
   background-color: none; /*스크롤바 트랙 색상*/
 }
+// myProfile
+
+.myProfile {
+  display: flex;
+  // width: 100%;
+  height: 90px;
+  align-items: center;
+
+  position: relative;
+  margin: 8px 8px 8px 0px;
+
+  padding: 0px 32px;
+  // background-color: red;
+}
+
+.myProfile:focus {
+  background-color: #f2f2f2;
+}
+
+.myProfile:hover {
+  background-color: #f8f8f8;
+}
+
+.myProfile__img {
+  height: 60px;
+  width: 60px;
+  border-radius: 20px;
+
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.myProfile__contents {
+  margin-left: 12px;
+}
+
+.myProfile__contents__name {
+  font-size: 12px;
+  font-weight: bold;
+  margin: 4px;
+
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.myProfile__name__status {
+  font-size: 12px;
+  color: #909090;
+  margin: 4px;
+
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+// friendProfile
+
+.friendListTitle {
+  margin: 0px 32px 8px 32px;
+  padding-top: 8px;
+
+  border-top: 1px solid #f2f2f2;
+}
+
+.friendListTitle_span_title {
+  font-size: 10px;
+  color: #909090;
+  margin: 4px;
+
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.friendListTitle_span_number {
+  font-size: 10px;
+  color: #909090;
+  margin: 4px;
+
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
 
 .friendProfile {
   display: flex;
@@ -230,6 +330,10 @@ body {
   position: relative;
   margin-right: 8px;
   padding: 0px 32px;
+}
+
+.friendProfile:focus {
+  background-color: #f2f2f2;
 }
 
 .friendProfile:hover {
