--- a/src/App.scss
+++ b/src/App.scss
@@ -104,7 +104,7 @@ body {
   margin-bottom: 16px;
   padding-bottom: 16px;
 
-  border-bottom: 1px solid #f2f2f2;
+  // border-bottom: 1px solid #f2f2f2;
 
   padding: 0px 32px;
 }
@@ -129,6 +129,8 @@ body {
   width: 100%;
   height: 100%;
 
+  position: relative;
+
   background-color: #f2f2f2;
   justify-content: space-between;
   align-items: center;
@@ -142,9 +144,15 @@ body {
 }
 
 .searchLine__left__searchInput {
+  display: block;
   font-size: 12px;
   width: 100%;
-  max-width: 300px;
+  min-width: 300px;
+
+  padding: 0;
+  border-width: 0;
+  box-sizing: border-box;
+
   border: none;
   background-color: #f2f2f2;
 }
@@ -400,6 +408,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0px 32px;
+  margin-bottom: 8px;
 }
 
 .talklist__title span {
@@ -407,7 +416,12 @@ body {
   font-weight: bold;
 }
 
-// talkList
+.talklist-wrap .searchLine {
+  padding: 16px 0px 16px 0px;
+  margin: 0px 32px 16px 32px;
+
+  border-bottom: 1px solid #f2f2f2;
+}
 
 .talkListrel {
   height: 100%;
@@ -451,6 +465,10 @@ body {
   position: relative;
   margin-right: 8px;
   padding: 0px 32px;
+}
+
+.talkProfile:focus {
+  background-color: #f2f2f2;
 }
 
 .talkProfile:hover {
