--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,7 +1,8 @@
 @import url(./reset.scss);
 @import url(./FriendList/FriendList.scss);
 @import url(./TalkList/TalkList.scss);
-
+@import url(./Chat/chat.scss);
+@import url(./SearchLine/Searchline.scss);
 body {
   width: 100vw;
   height: 100vh;
